force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <description>Custom object to store all financial transactions, including income and expenses.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TN-{0000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>