force-app/main/default/objects/Transaction__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring Donation</fullName>
            </value>
            <value>
                <fullName>One-time Donation</fullName>
            </value>
            <value>
                <fullName>Sadaka</fullName>
            </value>
            <value>
                <fullName>Youth Program</fullName>
            </value>
            <value>
                <fullName>Facebook Donations</fullName>
            </value>
            <value>
                <fullName>Other Income</fullName>
            </value>
            <value>
                <fullName>Kira-Rumi</fullName>
            </value>
            <value>
                <fullName>Dialog Commitee</fullName>
            </value>
            <value>
                <fullName>Business Expense</fullName>
            </value>
            <value>
                <fullName>Community Events</fullName>
            </value>
            <value>
                <fullName>Mentor Burs</fullName>
            </value>
            <value>
                <fullName>Talebe Rehberlik</fullName>
            </value>
            <value>
                <fullName>Collage Mentorship</fullName>
            </value>
            <value>
                <fullName>Other Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>