force-app/main/default/objects/Transaction__c/fields/Recurring_Donation__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Recurring Donations object to associate the transaction with a specific pledge.</description>
    <label>Recurring Donation</label>
    <referenceTo>Recurring_Donations__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>