force-app/main/default/objects/Transaction__c/fields/Transaction_Name__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Name__c</fullName>
    <description>Brief name for transaction.</description>
    <label>Transaction Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>