force-app/main/default/objects/Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Specifies whether the transaction is Income or Expense.</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>