force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Account__c</columns>
    <columns>Recurring_Donation__c</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Transaction_Name__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>