force-app/main/default/objects/Transaction__c/listViews/All_Income.listView-meta.xml
<ListView>
    <fullName>All_Income</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Recurring_Donation__c</columns>
    <columns>Transaction_Name__c</columns>
    <columns>Transaction_Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Income</value>
    </filters>
    <label>All Income</label>
</ListView>